--- a/static/css/_all.scss
+++ b/static/css/_all.scss
@@ -1,12 +1,20 @@
 $blue: #0400ff;
 $light_blue: #E5F2F4;
 $font_blue: #055D65;
+$background_blue: #F2F9FA;
 $header_bg: #45A6AF;
+$blue_h2: #013236;
 $white: #ffffff;
 $red: #E80B8B;
 $footer_bg: #03646D;
 $footer_text:  #BBDFE3;
 $header_social: #055D65;
+$border_line: #DCDCDC;
+$background_cf: #FAF2F9;
+$text_cf7: #898989;
+$text_cf7bottom: #1C3A2C;
+$white: #ffffff;
+$slick-arrows: #45A6AF;
 
 
 $font_opensans: 'OpenSans';
