--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -60,7 +61,10 @@ article > * + * {
 input,
 button,
 textarea,
-select {
+select,
+label {
+  margin: 0px;
+  padding: 0px;
   font: inherit;
 }
 
@@ -364,7 +368,7 @@ body {
 }
 
 .main_banner .banner {
-  height: 300px;
+  height: 481px;
 }
 .main_banner .banner img {
   width: 1200px;
@@ -388,12 +392,11 @@ body {
           transform: translate(650px, -50%);
 }
 .main_banner .slick-prev, .main_banner .slick-next {
-  background: black;
   color: white;
 }
 
-.departments, .news {
-  margin-top: 50px;
+.departments, .news, .important_information, .gallery, .contacts {
+  margin-top: 30px;
 }
 
 .departmens_container {
@@ -407,19 +410,413 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+.departmens_container .departmens_title .departmens_title-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 48px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #013236;
+}
 .departmens_container .departmens_body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 100px;
+  gap: 122px;
+  margin-top: 20px;
+}
+.departmens_container .departmens_body .hospital_left_column {
+  min-width: 448px;
+  background: #F2F9FA;
+  border-radius: 10px;
+}
+.departmens_container .departmens_body .hospital_left_column .hospital_subtitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  margin: 26px 0 15px 36px;
+}
+.departmens_container .departmens_body .hospital_left_column .hospital_subtitle .hospital_subtitle-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #055D65;
+}
+.departmens_container .departmens_body .hospital_left_column .hospital_items {
+  margin-left: 36px;
+}
+.departmens_container .departmens_body .hospital_left_column .hospital_items_nav {
+  list-style: none;
+}
+.departmens_container .departmens_body .hospital_left_column .hospital_items_nav li:before {
+  content: "— ";
+  position: relative;
+  color: #055D65;
+}
+.departmens_container .departmens_body .hospital_left_column .hospital_items_nav li {
+  margin-bottom: 12px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  color: #055D65;
+}
+.departmens_container .departmens_body .other_right_column {
+  min-width: 448px;
+  background: #F2F9FA;
+  border-radius: 10px;
+}
+.departmens_container .departmens_body .other_right_column .other_office_subtitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  margin: 26px 0 15px 36px;
+}
+.departmens_container .departmens_body .other_right_column .other_office_subtitle .other_office_subtitle-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #055D65;
+}
+.departmens_container .departmens_body .other_right_column .other_office_items {
+  margin-left: 36px;
+}
+.departmens_container .departmens_body .other_right_column .other_office_items_nav {
+  list-style: none;
+}
+.departmens_container .departmens_body .other_right_column .other_office_items_nav li:before {
+  content: "— ";
+  position: relative;
+  color: #055D65;
+}
+.departmens_container .departmens_body .other_right_column .other_office_items_nav li {
+  margin-bottom: 12px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  color: #055D65;
+}
+
+.important_information_container {
+  margin-bottom: 20px;
+}
+.important_information_container .important_information_title .important_information_title-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #013236;
 }
 
 .news_container {
   margin: 0 auto;
   max-width: 1200px;
 }
+.news_container .news_title {
+  margin-bottom: 20px;
+}
+.news_container .news_title .news_title-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #013236;
+}
 .news_container .news_body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 64px;
+}
+.news_container .news_body .news_posts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.news_container .news_body .news_posts .news_posts_items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-bottom: 1px solid #DCDCDC;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.news_container .news_buttom {
+  margin-top: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.news_container .news_buttom .news_buttom-link {
+  background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
+  border-radius: 50px;
+  padding: 12px 48px;
+  color: #ffffff;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.gallery_container {
+  margin-bottom: 20px;
+}
+.gallery_container .gallery_title-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #013236;
+}
+
+.contacts_title .contacts_title-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #013236;
+}
+
+.contacts_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 36px;
+}
+.contacts_body .contacts_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.contacts_body .contacts_text .contacts_line1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 25px;
+  gap: 3px;
+}
+.contacts_body .contacts_text .contacts_line1 .adress_left {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  color: #013236;
+}
+.contacts_body .contacts_text .contacts_line1 .adress_right {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  color: #013236;
+}
+.contacts_body .contacts_text .contacts_line2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 25px;
+  gap: 3px;
+}
+.contacts_body .contacts_text .contacts_line2 .adress_left {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  color: #013236;
+}
+.contacts_body .contacts_text .contacts_line2 .adress_right {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  color: #013236;
+}
+.contacts_body .contacts_text .contacts_line3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.contacts_body .contacts_text .contacts_line3 .contacts_category-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  color: #013236;
+}
+.contacts_body .contacts_text .contacts_departs {
+  margin-top: 30px;
+}
+.contacts_body .contacts_text .contacts_departs .contacts_posts_items {
+  margin-bottom: 15px;
+}
+.contacts_body .contacts_text .contacts_departs .contacts_posts_items .contacts_posts_items-link {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  color: #055D65;
+}
+.contacts_body .contacts_text .social {
+  margin-top: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.contacts_body .contacts_text .social .social_item i {
+  color: #055D65;
+  font-size: 30px;
+}
+.contacts_body .contacts_form {
+  background: #FAF2F9;
+  border-radius: 20px;
+  min-width: 422px;
+  min-height: 498px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 14px;
+}
+.contacts_body .contacts_form .wpcf7 {
+  margin-top: 39px;
+  margin-bottom: 39px;
+}
+.contacts_body .contacts_form .wpcf7 .wpcf7-form .text_cf7_bottom {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #1C3A2C;
+}
+.contacts_body .contacts_form .wpcf7 .wpcf7-form .text_cf7_bottom a {
+  color: #1C3A2C;
+  text-decoration: underline;
+}
+.contacts_body .contacts_form .wpcf7 .wpcf7-form .wpcf7-submit {
+  margin-top: 36px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  font-family: "Inter";
+  background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
+  border-radius: 50px;
+}
+.contacts_body .contacts_form .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-list-item {
+  margin: 0;
+}
+.contacts_body .contacts_form .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-list-item input {
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 2px;
+}
+.contacts_body .contacts_form .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-text {
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  margin-bottom: 16px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+  color: #898989;
+  padding: 12px 0 13px 14px;
+}
+.contacts_body .contacts_form .cf7_title {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  color: #E80B8B;
+  margin-bottom: 22px;
 }/*# sourceMappingURL=style.css.map */
