--- a/static/libs/slick/slick-theme.css
+++ b/static/libs/slick/slick-theme.css
@@ -18,7 +18,6 @@
   position: absolute;
   display: block;
   height: 20px;
-  width: 20px;
   line-height: 0px;
   font-size: 0px;
   cursor: pointer;
@@ -50,9 +49,8 @@
 .slick-prev:before,
 .slick-next:before {
   font-family: "slick";
-  font-size: 20px;
-  line-height: 1;
-  color: white;
+  font-size: 60px;
+  color: #45A6AF;
   opacity: 0.75;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
