--- a/static/libs/slick/slick-theme.scss
+++ b/static/libs/slick/slick-theme.scss
@@ -20,6 +20,7 @@ $slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
 $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
+$slick-arrows: #45A6AF;
 
 @function slick-image-url($url) {
     @if function-exists(image-url) {
@@ -65,7 +66,7 @@ $slick-opacity-not-active: 0.25 !default;
     position: absolute;
     display: block;
     height: 20px;
-    width: 20px;
+    // width: 20px;
     line-height: 0px;
     font-size: 0px;
     cursor: pointer;
@@ -91,9 +92,9 @@ $slick-opacity-not-active: 0.25 !default;
     }
     &:before {
         font-family: $slick-font-family;
-        font-size: 20px;
-        line-height: 1;
-        color: $slick-arrow-color;
+        font-size: 60px;
+        // line-height: 1;
+        color: $slick-arrows;
         opacity: $slick-opacity-default;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
