--- a/static/css/style.css
+++ b/static/css/style.css
@@ -539,6 +539,11 @@ body {
   color: #013236;
 }
 
+.important_information .slick-prev,
+.important_information .slick-next {
+  display: none;
+}
+
 .news_container {
   margin: 0 auto;
   max-width: 1200px;
