--- a/static/libs/slick/slick-theme.scss
+++ b/static/libs/slick/slick-theme.scss
@@ -13,8 +13,8 @@ $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
-$slick-prev-character: "\2190" !default;
-$slick-next-character: "\2192" !default;
+$slick-prev-character: "\2039" !default;
+$slick-next-character: "\203A" !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
@@ -92,7 +92,7 @@ $slick-arrows: #45A6AF;
     }
     &:before {
         font-family: $slick-font-family;
-        font-size: 60px;
+        font-size: 160px;
         // line-height: 1;
         color: $slick-arrows;
         opacity: $slick-opacity-default;
