--- a/static/css/_reset.scss
+++ b/static/css/_reset.scss
@@ -28,10 +28,10 @@ dd {
 }
 
 body {
-  min-height: 100vh;
+  // min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  line-height: 1.5;
+  line-height: 1;
 }
 
 ul[class],
