--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,10 +30,9 @@ dd {
 }
 
 body {
-  min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  line-height: 1.5;
+  line-height: 1;
 }
 
 ul[class],
@@ -824,4 +823,371 @@ body {
   font-size: 24px;
   color: #E80B8B;
   margin-bottom: 22px;
+}
+
+.about_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.about_container .about_title {
+  margin-top: 28px;
+  margin-bottom: 28px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 60px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0;
+  color: #013236;
+}
+.about_container img {
+  width: 100%;
+  margin-bottom: 28px;
+}
+.about_container .text_top, .about_container .text_bottom {
+  max-width: 844px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #000000;
+}
+.about_container .about_slider_top {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+.about_container .subtitle_top, .about_container .subtitle_bottom {
+  margin-top: 32px;
+  margin-bottom: 20px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #000000;
+}
+.about_container .block_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 15px;
+  margin-bottom: 32px;
+}
+.about_container .block_row .block_item {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #E5F2F4;
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  min-width: 289px;
+  min-height: 108px;
+}
+.about_container .block_row .block_item a {
+  color: #000000;
+}
+
+.page_news_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.page_news_container .page_news_title {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 60px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #013236;
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
+.page_news_container input {
+  background: #FFFFFF;
+  border: 2px solid #45A6AF;
+  border-radius: 50px;
+  width: 100%;
+  min-height: 71px;
+  margin-bottom: 32px;
+}
+.page_news_container input .button {
+  height: 5px;
+  position: absolute;
+  top: 1.5rem;
+  left: 1rem;
+}
+.page_news_container ::-webkit-input-placeholder {
+  padding-left: 79px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  color: #898989;
+}
+
+.prevention {
+  background: #F2F9FA;
+}
+.prevention .prevention_title {
+  margin-top: 28px;
+  margin-bottom: 28px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #000000;
+}
+.prevention .prevention_slider {
+  min-height: 300px;
+  margin-bottom: 32px;
+}
+
+.announcement_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.announcement_container .announcement_title {
+  margin-top: 32px;
+  margin-bottom: 28px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #000000;
+}
+.announcement_container .announcement_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 44px;
+}
+.announcement_container .announcement_body .announcement_text {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  padding-top: 48px;
+  color: #000000;
+}
+.announcement_container .announcement_body .announcement_text li {
+  line-height: 2;
+}
+
+.important1 {
+  background: #FAF2F9;
+  margin-top: 32px;
+}
+.important1 .important1_title {
+  margin-top: 28px;
+  margin-bottom: 28px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 48px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #000000;
+}
+.important1 .important1_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 44px;
+}
+.important1 .important1_body .important1_text {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 24px;
+}
+.important1 .important1_body .important1_text p {
+  margin-top: 81px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  color: #000000;
+}
+.important1 .important1_body .important1_text a {
+  max-width: 203px;
+  background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
+  border-radius: 50px;
+  margin-bottom: 113px;
+  padding: 13px 64px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  /* identical to box height */
+  -ms-flex-preferred-size: content;
+      flex-basis: content;
+  color: #FFFFFF;
+}
+
+.important2_container .important2_title {
+  margin-top: 32px;
+  margin-bottom: 28px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #000000;
+}
+.important2_container .important2_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 44px;
+}
+.important2_container .important2_body .important2_text {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  color: #000000;
+}
+
+.covid {
+  background: #F2F9FA;
+  margin-top: 32px;
+}
+.covid .covid_container .covid_title {
+  margin-top: 28px;
+  margin-bottom: 28px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  /* identical to box height */
+  color: #000000;
+}
+.covid .covid_container .covid_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 44px;
+}
+.covid .covid_container .covid_body .covid_text {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  /* identical to box height */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #000000;
+}
+.covid .covid_container .covid_body .covid_text p {
+  margin-top: 36px;
+}
+.covid .covid_container .covid_body .covid_text a {
+  background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
+  border-radius: 50px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  /* identical to box height */
+  margin-top: 24px;
+  text-align: center;
+  padding: 13px 64px;
+  color: #FFFFFF;
+  max-width: 203px;
 }/*# sourceMappingURL=style.css.map */
